force-app/main/default/objects/Phone_Plan__x/Phone_Plan__x.object-meta.xml
<CustomObject>
    <description>phone_plans</description>
    <externalDataSource>Mobile_Devices</externalDataSource>
    <externalName>phone_plans</externalName>
    <label>Phone Plan</label>
    <pluralLabel>Phone Plans</pluralLabel>
</CustomObject>