force-app/main/default/objects/Phone_Plan__x/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>Cost</description>
    <externalDeveloperName>Cost</externalDeveloperName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>