force-app/main/default/objects/Phone_Plan__x/fields/Data_Limit__c.field-meta.xml
<CustomField>
    <fullName>Data_Limit__c</fullName>
    <description>Data_Limit</description>
    <externalDeveloperName>Data_Limit</externalDeveloperName>
    <label>Data_Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>