force-app/main/default/objects/Phone_Plan__x/fields/Text_Limit__c.field-meta.xml
<CustomField>
    <fullName>Text_Limit__c</fullName>
    <description>Text_Limit</description>
    <externalDeveloperName>Text_Limit</externalDeveloperName>
    <label>Text_Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>